--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>Togo Kamata</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is my first website using GitHub Pages.</p>
+    <h1>Togo Kamata</h1>
+    <p>Welcome to my website!</p>
 </body>
 </html>
