Added a link to mystudents.html
Added a link to mystudents.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Togo Kamata</h1>
     <p>Welcome to my website!</p>
+    <p><a href="mystudents.html">Go see my students!</a></p>
 </body>
 </html>
