--- a/mystudents.html
+++ b/mystudents.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Page</title>
+    <title>My Students and Me</title>
 </head>
 <body>
-    <h1>Welcome to the New Page</h1>
-    <p>This is the content of the new page.</p>
+    <h1>My Students and Me!</h1>
+    <p>This is the content of this page.</p>
 </body>
 </html>
