--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Togo Kamata</h1>
     <p>Welcome to my website!</p>
     <p><a href="mystudents.html">Go see my students!</a></p>
+    <p><a href="personalprojects.html">Go see my personal projects!</a></p>
 </body>
 </html>
