--- a/personalprojects.html
+++ b/personalprojects.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Personal Projects</h1>
-    <p>See my personal projects here!.</p>
+    <p>See my personal projects here!</p>
 </body>
 </html>
