--- a/mystudents.html
+++ b/mystudents.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My Students and Me!</h1>
-    <p>This is the content of this page.</p>
+    <p>I help teach students at Miller Middle School during breaks in the school year. See what I do in the classroom here!</p>
 </body>
 </html>
