--- a/mystudents.html
+++ b/mystudents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Students and Me</title>
+    <title>Togo Kamata | My Students and Me</title>
 </head>
 <body>
     <h1>My Students and Me!</h1>
