--- a/personalprojects.html
+++ b/personalprojects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Page</title>
+    <title>Togo Kamata | Personal Projects</title>
 </head>
 <body>
     <h1>Personal Projects</h1>
