--- a/personalprojects.html
+++ b/personalprojects.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
+    <p><a href="electrictrain">Electrifying a Model Train to Run on Overhead Wires</a></p>
 </body>
 </html>
