--- a/electrictrain.html
+++ b/electrictrain.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Electrifying a Model Train to Run on Overhead Wires</h1>
     <p>I'm attempting to modify an electric train so it runs the same way it does in real life - by taking electricity in from overhead lines!</p>
+    <p><a href="electrictrainpart1.html">Part 1: The equipment and the plan</a></p>
 </body>
 </html>
