--- a/mystudents.html
+++ b/mystudents.html
@@ -9,5 +9,9 @@
 <body>
     <h1>My Students and Me!</h1>
     <p>I help teach students at Miller Middle School during breaks in the school year. See what I do in the classroom here!</p>
+     <figure>
+        <img src="millerteacher2023.jpg" alt="Me teaching 8th grade students math in Summer 2023">
+        <figcaption>Me teaching 8th grade students math in Summer 2023.</figcaption>
+     </figure>
 </body>
 </html>
