--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Togo Kamata</h1>
     <p>Hi!</p>
     <p>I'm Togo Kamata, a 3rd year student purusing a Physics B.S degree at UCSB. My interests include Physics, Engineering, and Teaching. I'm a massive vehicle nerd, and this is my attempt to create a website where I can showcase my projects and what I do!<p>
-    <p><a href="mystudents.html">Go see my students!</a></p>
-    <p><a href="personalprojects.html">Go see my personal projects!</a></p>
+    <p><a href="my_students.html">Go see my students!</a></p>
+    <p><a href="personal_projects.html">Go see my personal projects!</a></p>
 </body>
 </html>
