Update and rename personalprojects.html to personal_projects.html

--- a/personal_projects.html
+++ b/personal_projects.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
-    <p><a href="electrictrain">Electrifying a Model Train to Run on Overhead Wires</a></p>
+    <p><a href="electric_train">Electrifying a Model Train to Run on Overhead Wires</a></p>
 </body>
 </html>
