--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <h2>Hi! I am...</h2>
+    <h2>Welcome to the Website of...</h2>
     <h1>Togo Kamata</h1>
     <p>Hi!</p>
     <p>I'm Togo Kamata, a 3rd-year student pursuing a Physics B.S. degree at UCSB. My interests include Physics, Engineering, and Teaching. I'm a massive vehicle nerd, and this is my attempt to create a website where I can showcase my projects and what I do!</p>
