--- a/personal_projects.html
+++ b/personal_projects.html
@@ -9,6 +9,25 @@
 <body>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PDF Link Example</title>
+</head>
+<body>
+    <!-- Link to download or open the PDF in a new tab -->
+    <a href="PHYS_20CL_Independent_Measurement.pdf" target="_blank">Download PDF</a>
+
+    <!-- Embed the PDF in the page -->
+    <embed src="PHYS_20CL_Independent_Measurement.pdf" type="application/pdf" width="600" height="400">
+
+    <!-- Embed the PDF using an iframe -->
+    <iframe src="PHYS_20CL_Independent_Measurement.pdf" width="600" height="400"></iframe>
+</body>
+</html>
+
     <p><a href="central_subway">Is Muni’s Central Subway in San Francisco Really Efficient?</a></p>
     <p><a href="electric_train">Electrifying a Model Train to Run on Overhead Wires</a></p>
 </body>
