--- a/personal_projects.html
+++ b/personal_projects.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
-    <p><a href="independent_measurement">Measuring permeability of free space &mu;<sub>0</sub></a></p>
+    <p><a href="independent_measurement">Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</a></p>
     <p><a href="central_subway">Is Muni’s Central Subway in San Francisco Really Efficient?</a></p>
     <p><a href="electric_train">Electrifying a Model Train to Run on Overhead Wires</a></p>
 </body>
