--- a/independent_measurement.html
+++ b/independent_measurement.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Togo Kamata | Personal Projects | Is Muni’s Central Subway in San Francisco Really Efficient?</title>
+    <title>Togo Kamata | Personal Projects | Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-  <h1>Measuring permeability of free space &mu;<sub>0</sub> using mutual induction</h1>
-  <p>This was a project I chose to do for an indepndent measurement in one of my undergraduate physics classes, PHYS 20CL. It involved creating various concentric rings of condutive wire around a small ring of wire, where each ring had a resistor applied to it. When a constant rate of change in voltage was applied to the outer ring from a function generator, it created a constant rate of change in current, and therefore, a constant rate of change in magnetic field and flux within the outer ring. This rate of change in magnetic flux within the outer ring meant that there was a constant rate of change of magnetic flux within the inner ring, which induced voltage across the circuit of the inner ring. This induced voltage generated current, which was measured using an electrometer. While the results were not accurate, the trends found in the experiment were mostly consistent with theory and formula - when the number of turns in the outer coil increased, the induced current increased asd well.</p>
-  <p>As this was a project done for a class, it was finished on LaTeX, and is in the form of a PDF. The PDF can be accessed below.</p>
+  <h1>Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</h1>
+  <p>This was a project I chose to do for an independent measurement in one of my undergraduate physics classes, PHYS 20CL. It involved creating various concentric rings of conductive wire around a small ring of wire, where each ring had a resistor applied to it. When a constant rate of change in voltage was applied to the outer ring from a function generator, it created a constant rate of change in current, and therefore, a constant rate of change in magnetic field and flux within the outer ring. This rate of change in magnetic flux within the outer ring meant that there was a constant rate of change of magnetic flux within the inner ring, which induced voltage across the circuit of the inner ring. This induced voltage generated current, which was measured using an electrometer. While the results were not accurate, the trends found in the experiment were mostly consistent with theory and formula - when the number of turns in the outer coil increased, the induced current increased as well.</p>
+  <p>As this was a project done for a class, it was finished on LaTeX, and is in the form of a PDF. The PDF can be accessed below either on this page, or via the link below.</p>
   <p><a href="PHYS_20CL_Independent_Measurement.pdf" target="_blank">Open PDF in a new tab</a></p>
 
+  <!-- Embed the PDF directly on the page -->
+  <embed src="PHYS_20CL_Independent_Measurement.pdf" type="application/pdf" width="100%" height="600px">
 </body>
 </html>
