--- a/independent_measurement.html
+++ b/independent_measurement.html
@@ -12,7 +12,7 @@
   <p>As this was a project done for a class, it was finished on LaTeX, and is in the form of a PDF. The PDF can be accessed below either on this page, or via the link below.</p>
   <p><a href="PHYS_20CL_Independent_Measurement.pdf" target="_blank">Open PDF in a new tab</a></p>
 
-  <!-- Embed the PDF directly on the page -->
-  <embed src="PHYS_20CL_Independent_Measurement.pdf" type="application/pdf" width="100%" height="600px">
+    <!-- Embed the PDF directly on the page -->
+    <iframe src="PHYS_20CL_Independent_Measurement.pdf" width="100%" height="600px"></iframe>
 </body>
 </html>
