--- a/personal_projects.html
+++ b/personal_projects.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Personal Projects</h1>
     <p>See my personal projects here!</p>
-    <p><a href="independent_measurement">Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</a></p>
-    <p><a href="central_subway">Is Muni’s Central Subway in San Francisco Really Efficient?</a></p>
+    <p><a href="independent_measurement">Measuring Permeability of Free Space &mu;<sub>0</sub> Using Mutual Induction</a> (Spring 2024)</p>
+    <p><a href="central_subway">Is Muni’s Central Subway in San Francisco Really Efficient?</a> (Ongoing)</p>
     <!--<p><a href="electric_train">Electrifying a Model Train to Run on Overhead Wires</a></p>-->
 </body>
 </html>
