--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -39,44 +39,44 @@
     <li>Leaving the Caltrain Station at 4th and King streets. The stopwatch was started the moment I left the doors of the station facing 4th and King streets.</li>
      <figure>
         <img src="leaving_caltrain_station.jpg" alt="Leaving the Caltrain Station">
-        <figcaption>I started measuring the time the moment I walked out of the doors at the Caltrain Station facing the intersection of 4th and King streets </figcaption>
+        <figcaption>I started measuring the time the moment I walked out of the doors at the Caltrain Station facing the intersection of 4th and King streets. (Picture taken 8/8/24)</figcaption>
      </figure>
     <li>Walking to the T platform. This involved crossing two crosswalk, first across King street, and then half of 4th street onto the T platform in the medan of 4th street. The time for "Walk time betweeen Caltrain station to the T platform at 4th and King" stops when I finish climbing the ramp onto the T platform.</li>
      <figure>
         <img src="approaching_intersection_to_4th_and_king_crossing.jpg" alt="Approaching the crosswalks at 4th and King streets on my way to the T platform">
-        <figcaption>Approaching the crosswalks at 4th and King streets on my way to the T platform</figcaption>
+        <figcaption>Approaching the crosswalks at 4th and King streets on my way to the T platform. (Picture taken 8/8/24)</figcaption>
      </figure>
      <figure>
         <img src="intersection_at_4th_and_king.jpg" alt="Waiting at the crosswalks at 4th and King streets">
-        <figcaption>Waiting to cross the crosswalks at 4th and King streets</figcaption>
+        <figcaption>Waiting to cross the crosswalks at 4th and King streets. (Picture taken 8/8/24)</figcaption>
      </figure>
      <figure>
         <img src="ramp_to_t_platform_4th_and_king.jpg" alt="The ramp to the T platform at 4th and King">
-        <figcaption>The ramp to the T platform at 4th and King in the median of 4th street, looking North towards Union Square. The entrance to the Central Subway is just visible at the center of the image where an overpass and tunnel entrance exists. Note the Caltrain station on the left side. The moment I got over the ramp, "lap" was clicked on my stopwatch, and time spent walking between the Caltrain and T platform stopped recording, and time spent waiting for the T train started recording.</figcaption>
+        <figcaption>The ramp to the T platform at 4th and King in the median of 4th street, looking North towards Union Square. The entrance to the Central Subway is just visible at the center of the image where an overpass and tunnel entrance exists. Note the Caltrain station on the left side. The moment I got over the ramp, "lap" was clicked on my stopwatch, and time spent walking between the Caltrain and T platform stopped recording, and time spent waiting for the T train started recording. (Picture taken 8/8/24)</figcaption>
      </figure>
     <li>Waiting for the T Third Street train that would take me to Union Square Station. The moment I get to the T platform, wait time for the T train begins. The wait time for the T ends when I step on the train, and the stopwatch then measures the time I spend on the train to Union Square station.</li>
     <figure>
         <img src="t_platform_4th_and_king.jpg" alt="The T platform at 4th and King">
-        <figcaption>Standing on the T platform at 4th and King, waiting for my train, looking South at the direction my train will arrive. Headways on the T are 10 minutes, as detailed in "The Background and the Idea".</figcaption>
+        <figcaption>Standing on the T platform at 4th and King, waiting for my train, looking South at the direction my train will arrive. Headways on the T are 10 minutes, as detailed in "The Background and the Idea". (Picture taken 8/8/24)</figcaption>
     </figure>
     <figure>
         <img src="t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
-        <figcaption>The T train arrives at platform. Time spent waiting ends when I step on the train. The stopwatch then starts measuring the time I spent on the train itself.</figcaption>
+        <figcaption>The T train arrives at platform. Time spent waiting ends when I step on the train. The stopwatch then starts measuring the time I spent on the train itself. (Picture taken 8/8/24)</figcaption>
     </figure>
     <li>Taking the T to Union Square station. Time spent on the train starts when I step on the train, and ends when I step off of it at Union Square station. The T runs about half a mile north on the median of 4th street, obeying traffic lights until it enters the Central Subway just ahead of the intersection on 4th and Bryant streets. Union Square station is the 3rd stop. The T stops at 4th and Brannan, still in the median of 4th street, and then once in the Central Subway, at Yerba Buena / Moscone Center, and then at Union Square / Market Street Station. The T would continue on one more stop to Chinatown Rose Pak station where the line ends. Unforntuately I have no image of the ride.</li>
     <li>Leaving Union Square station, and heading to the Dewey Monument. Once I step off the train, the stopwatch begins measuring the time spent walking from the platform to the Dewey Monument close by. I took the exit from the platform that directed me to Powell station nearby where I could transfer to the other Muni Metro lines as well as BART. Once past the fare gates, I turned left to the exit at Stockton and Ellis street. I took care not to walk on the escalators.</li>
     <figure>
         <img src="leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street">
-        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street</figcaption>
+        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street.  (Picture taken 8/8/24)</figcaption>
     </figure>
     >
     <figure>
         <img src="approaching_union_square_at_stockton_and_geary.jpg" alt="Union Square, at Stockton and Geary">
-        <figcaption>Having walked across two crossings obeying all traffic laws, I approach Union Square at the intersection between Stockton and Geary. The median strip straight ahead is where I will board the bus back to the Caltrain station.</figcaption>
+        <figcaption>Having walked across two crossings obeying all traffic laws, I approach Union Square at the intersection between Stockton and Geary. The median strip straight ahead is where I will board the bus back to the Caltrain station. (Picture taken 8/8/24)</figcaption>
     </figure>
    <figure>
         <img src="approaching_dewey_monument.jpg" alt="Dewey Monument">
-        <figcaption>As I walk up the steps to Union Square, I see the Dewey Monument at the center of the plaza. When I reach it, is when time recording is finally stopped.</figcaption>
+        <figcaption>As I walk up the steps to Union Square, I see the Dewey Monument at the center of the plaza. When I reach it, is when time recording is finally stopped. (Picture taken 8/8/24)</figcaption>
     </figure>
     </ol>
 
