--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -16,7 +16,7 @@
         <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King</figcaption>
      </figure>
     <p>I measured not only the total time between starting point and ending point, but time between any signficant events within the trip as well. This was done by simply pressing "lap" on my stopwatch. All of these times between significant events when added together would equal the total time between the starting and ending point.</p>
-    <p>For northbound runs (T Third Street), these times between significant events were</p>
+    <p>For northbound runs (T Third Street), these times between significant events were:</p>
     <ol>
     <li>Walk time betweeen Caltrain station to the T platform at 4th and King</li>
     <li>Wait time on the 4th and King platform for a T train to arrive</li>
@@ -26,7 +26,7 @@
     <li>Walk time between Union Square station platform to the Dewey Monument</li>  
     </ol>
 
-    <p>For southbound runs (30 Stockton / 45 Union Stockton), these times between significant events were</p>
+    <p>For southbound runs (30 Stockton / 45 Union Stockton), these times between significant events were:</p>
     <ol>
     <li>Walk time from the Dewey Monument to the bus stop at Stockton and Geary</li>
     <li>Wait time at the Stockton and Geary bus stop for the next 30 or 45 to arrive</li>
