--- a/central_subway.html
+++ b/central_subway.html
@@ -16,8 +16,8 @@
     </figure>
 
     <h2>Table of Contents</h2>
-    <p><a href="central_subway_1.html">The Background and the Idea (8/6/24)</a></p>
-    <p><a href="central_subway_2.html">Measuring (Invalidated) Data (8/8/24)</a></p>
+    <p><a href="central_subway_1.html">1. The Background and the Idea (8/6/24)</a></p>
+    <p><a href="central_subway_2.html">2. Measuring (Invalidated) Data (8/8/24)</a></p>
     
 </body>
 </html>
