--- a/central_subway_1.html
+++ b/central_subway_1.html
@@ -10,6 +10,7 @@
 
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>1. The Background and the Idea (8/6/24)</h2>
+    <p><a href="central_subway_2.html">1. Next Article: 2. Measuring (Invalidated) Data (8/22/24)</a></p>
     <p>I’m a massive transit nerd and advocate – I believe that to get ourselves out of the car-centric, polluting cities we’ve built over the past over half a century, better mass transit, and cities built around said mass transit is the way forward. </p>
     <p>Which brings us to San Francisco, just under an hour north of San Jose where I live in the Bay Area. San Francisco has amazing public transit – a regional metro system (BART), streetcar / subway / light rail (Muni Metro), various bus lines, and a commuter rail system (Caltrain) set to see massive improvements this year. </p>
     <p>But here I will focus on the quasi-streetcar / subway / light rail system, known as Muni Metro. Muni Metro is operated by Muni, shorthand for what used to be the San Francisco Municipal Railway, now the San Francisco Municipal Transportation Agency, which operates not just Muni Metro, but the various bus lines crisscrossing throughout the city, as well as the historic cable cars and historic streetcars within the city. </p>
