--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -10,6 +10,7 @@
 
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>2. Measuring (Invalidated) Data (8/22/24)</h2>
+    <p><a href="central_subway_1.html">1. Previous Article: Is Muni’s Central Subway in San Francisco Really Efficient? (8/6/24) </a></p>
     <p>I took my first set of data points on 8/8/2024, a Thursday. Note that this article is being written AFTER the data was collected. I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
      <figure>
         <img src="caltrain_station_arrival.jpg" alt="Arrived at the Caltrain Station">
